fixed long message overflow

--- a/frontend/src/components/Chat/Chat.css
+++ b/frontend/src/components/Chat/Chat.css
@@ -40,6 +40,7 @@
     float: right;
     clear: both;
     margin: 0px 0px 20px;
+    overflow-wrap: anywhere;
 }
 
 .chats {
@@ -47,6 +48,7 @@
     float: left;
     clear: both;
     margin: 0px 0 20px;
+    overflow-wrap: anywhere;
 }
 
 .chatText {
